--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -628,12 +628,9 @@ downArrow{
   font-family: 'Poppins', sans-serif;
 }
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+
 .footer__container {
+  padding: 30px;
   min-width: 1170px;
   margin: auto;
 }
