--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -745,11 +745,12 @@ text-shadow:
   font-family: 'Poppins';
   width: 100%;
   min-height:120vh;
-  background-image: url('../dist/images/kkksnaker2.jpg');
+  background-image: url('../dist/images/snekerback.jpeg');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
-  opacity: 95%;
+  
+  
 
 }
 
@@ -793,7 +794,6 @@ text-shadow:
   align-items: center;
   justify-content: center;
   opacity: 0;
- 
   transition: .5s ease;
 
 }
@@ -814,7 +814,7 @@ text-shadow:
   margin-top: 0.25em;
 }
 
-.tier__title{
+.tier2__title h1{  
   color: rgb(29, 19, 17);
   font-size: 32px;
   margin:0;
