--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -679,7 +679,7 @@ downArrow{
   padding: 0 15px;
 }
 
-.footer__col p {
+.footer__col h1 {
   font-size: 300px;
   color: rgb(9, 230, 255);
 text-shadow:
@@ -757,5 +757,3 @@ text-shadow:
   height: 50%;
   background: linear-gradient(45deg, #0F0F0F 50%, #700282 78.65%);
 }
-
-
