--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -29,6 +29,7 @@ downArrow{
   }
 
   .hero-image__container{
+    @include transition-ease;
     position:relative;
     height:auto;
     min-height:512px;
@@ -54,6 +55,7 @@ downArrow{
   }
   
   .ads-background {
+  
     margin:0;
     position: relative;
     height: 50%;
@@ -157,6 +159,7 @@ downArrow{
 }
 
 .carousel {
+  @include transition-ease;
   position: relative;
   padding-top: 40%;
   filter: drop-shadow(0 0 10px #0003);
@@ -330,144 +333,6 @@ downArrow{
 }
 
 
-/*Navigation bar*/
-
-.navbar__container {
-  @include transition-transparent;
-  width:100%;
-  top:0;
-  height:100%;
-  position:sticky;
-  z-index:10;
-  display: flex;
-  flex-direction: row;
-  // justify-content: space-between;
-  align-items: center;
-  // padding: 30px 70px;
-  // overflow: hidden;
-  background-color: black;
-}
-
-.navbar__links{
-  justify-content:center;
-  align-items:center;
-  display:flex;
-  flex-direction: row;  
-  flex:2;
-}
-
-.navbar__container  li a{
-  text-decoration: none;
-  text-shadow:  0 0 7px #fff,
-  0 0 10px #fff,
-  0 0 21px #fff,
-  0 0 42px #0fa,
-  0 0 82px #0fa,
-  0 0 92px #0fa,
-  0 0 102px #0fa,
-  0 0 151px #0fa;;
-}
-
-.navbar__logoContainer{
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  justify-content:center;
-  align-items:center;
-}
-.logo{
-  margin:10px;
-  cursor: pointer;
-}
-
-
-
-.navbar__links li{
-  padding: 0 15px;
-  text-transform: uppercase;
-}
-
-.navbar__links li a{
-  transition: .3s;
-  color: #ffffff
-}
-
-.navbar__links a {
-  color: white;
-  text-decoration: none;
-  text-shadow:  0 0 7px #fff,
-  0 0 10px #fff,
-  0 0 82px #0fa,
-  0 0 92px #0fa,
-  0 0 102px #0fa,
-  0 0 151px #0fa,
-  0 0 151px #0fa,
-}
-
-.navbar__links li a:hover{
-  color: #eeab2e;
-}
-
-
-.navbar__links .navbar__link-active a{
-  color: #eeab2e; 
-}
-
-.navbar__emailContainer a:hover{
-  background-color: grey;
-}
-
-.btn-area{
-  cursor: pointer;
-  color: white;
-  font-size:  16px;
-  letter-spacing:  2px;
-  text-transform: uppercase;
-  padding: 10px 30px;
-  // background: black;
-}
-
-
-
-.navbar__emailContainer{
-  position:relative;
-  height:100%;
-  justify-content: center;
-  align-items: center;
-  display:flex;
-  flex:1;
-}
-
-.navbar__emailLogoContainer{
-  justify-content: center;
-  align-items: center;
-  display:flex;
-  background-color:white;
-  border-radius:10px;
-  width:34px;
-  padding:10px;
-  height:34px;
-}
-
-
-.navbar__emailContainer a{
-  text-decoration: none;
-  color:black;
-  // text-shadow:  0 0 7px #fff,
-  // 0 0 10px #fff,
-  // 0 0 21px #fff,
-  // 0 0 42px #0fa,
-  // 0 0 82px #0fa,
-  // 0 0 92px #0fa,
-  // 0 0 102px #0fa,
-  // 0 0 151px #0fa;
-
-  &:hover{
-    color:grey;
-    background-color:white;
-  }
-}
-
 /*Tier*/
 
 .flex__container {
@@ -477,6 +342,8 @@ downArrow{
 
 
 .tier__container {
+  @include transition-ease;
+
   margin: 0;
   padding: 0px;
   box-sizing: border-box;
@@ -621,29 +488,28 @@ downArrow{
 }
 
 .ads-background {
+  @include transition-ease;
+
   min-height:512px;
   height:100%;
   display:flex;
-  flex-direction: row;
+  flex-direction:column ;
+  align-items:center;
   padding:30px;
   position: relative;
   height: 50%;
   background: linear-gradient(45deg, #0F0F0F 50%, #700282 78.65%);
 }
-
+  
 .ads__text {
   display:flex;
   flex-direction: column;
   justify-content: center;
-  max-width:50%;
 }
 
-.ads__image{
-  background-image: url("../dist/images/cbsproductshoepic1.jpg");
-  max-width:50%;
-}
 
 .shop__container{
+  @include transition-ease;
   padding: 20px;
   width:100%; 
   display:flex;
@@ -653,161 +519,5 @@ downArrow{
 
 .shop__title{
   margin:40px;
-}
-
-.footer__container {
-  line-height: 1.5;
-  font-family: 'Poppins', sans-serif;
-}
-
-
-.footer__container {
-  padding: 30px;
-  min-width: 1170px;
-  margin: auto;
-}
-
-.footer__row {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.footer__col ul {
-  list-style: none;
-}
-.footer {
- background-color: #151516;
- padding: 40px 0;
-}
-
-.footer__col {
-  width: 25%;
-  padding: 0 15px;
-}
-
-.footer__col h1 {
-  font-size: 300px;
-  color: rgb(9, 230, 255);
-text-shadow:
-    0 0 7px #fff,
-    0 0 10px #fff,
-    0 0 21px #fff,
-    0 0 42px rgb(0, 255, 247),
-    0 0 82px rgb(0, 255, 247),
-    0 0 92px rgb(0, 255, 247),
-    0 0 102px rgb(0, 255, 247),
-    0 0 151px rgb(0, 255, 247);
-  text-transform: uppercase;
-  margin-bottom: 35px;
-  font-weight: 500;
-  position: relative;
-}
-
-
-.footer__col ul li:last-child{
-  margin-bottom: 10px;
-}
-
-.footer__col ul li a {
-  font-size: 16px;
-  text-transform: capitalize;
-  color: white;
-  text-decoration: none;
-  font-weight: 300;
-  color: #bbbbbb;
-  display: block;
-  transition: all 0.3s ease;
-}
-
-.footer__col ul li a:hover {
-  color: white;
-  padding-left: 8px;
-}
-
-.footer__col i {
-  display: inline-block;
-  height: 40px;
-  width: 40px;
-  background-color: rgba(255,255,255,0.2);
-  margin: 0 10px 10px 0;
-  line-height: 40px;
-  border-radius: 50%;
-  color: white;
-  transition: all 0.3s ease;
-  text-align: center;
-
-}
-
-.footer__col i:hover {
-  color: #24262b;
-  background-color: white;
-}
-
-.footer__row p {
-  color: #fff;
-  text-align: center;
-  font-size: 10px;
-}
-
-
-
-
-
-.ads-background {
-  min-height:512px;
-  height:100%;
-  display:flex;
-  flex-direction: row;
-  padding:30px;
-  position: relative;
-  height: 50%;
-  background: linear-gradient(45deg, #0F0F0F 50%, #700282 78.65%);
-}
-
-.footer__col__input{
-    height:40px;
-    border-radius:10px;
-
-    &__button{
-      border: 1px solid #673ab7;
-      border-radius: 0;
-      margin-bottom: 10px;
-      text-transform: uppercase;
-      font-weight: 600;
-      font-size: 14px;
-      padding: 12px 12px;
-      display: inline-block;
-      border-radius: 2px;
-      cursor: pointer;
-      letter-spacing: 1px;
-      outline: 0;
-      position: relative;
-      text-decoration: none!important;
-      color: #fff;
-      -webkit-transition: all ease .5s;
-      -moz-transition: all ease .5s;
-      transition: all ease .5s;
-      background: #BBBBBB;
-      padding-left: 22px;
-      padding-right: 22px;
-      border-radius: 10px;
-      border: 2px solid #ffffff;
-
-      &:hover{
-        background: #ffffff;
-        color:#BBBBBB;
-        border: 2px solid #BBBBBB;
-      }
-    }
-}
-
-.footer__col__input__container{
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content:center;
-  gap:15px;
-
- 
 }
 
