--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -1,26 +1,22 @@
 .titleofproduct1 {
-    font-family: 'Average Sans';
     font-style: normal;
     font-weight: bold;
     font-size: 45px;
 }
 
 .titleofproduct1_text {
-    font-family: 'Average Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
 }
 
 .specification {
-    font-family: 'Average Sans';
     font-style: normal;
     font-weight: bold;
     font-size: 45px;
 }
 
 .specification_text {
-    font-family: 'Average Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -28,9 +24,10 @@
 }
 
 .product__container{
+    @include transition-ease;
     padding:50px 40px;
     display:flex;
-    flex-direction: row;
+    flex-direction: column;
     position:relative;
     width:100%;
     min-height:100%;
@@ -78,4 +75,15 @@
     display:flex;
     flex-direction:column;
     align-items:center;
+}
+
+.arrow{
+    position:relative;
+    left:7.5%;
+    margin-top:2.5%;
+    font-size:50px;
+
+    &:hover{
+        cursor:pointer;
+    }
 }
