--- a/scss/_products.scss
+++ b/scss/_products.scss
@@ -1,4 +1,5 @@
 .hero-image2__container {
+  @include transition-ease;
     position:relative;
     height:500px;
     
@@ -25,16 +26,16 @@
 }
 
 .container_card {
-    height: 100vh;
-    width: 100vw;
-    max-height: 800px;
-    max-width: 1280px;
-    min-height: 600px;
-    min-width: 1000px;
+  @include transition-ease;
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin: -10px auto;
+    flex-direction: column;
+    gap:50px;
+    padding: 60px 0;
   }
   .border_card {
     height: 369px;
@@ -80,7 +81,7 @@
     background-size: 300px;
   }
   .card1:hover {
-    background: url("../images/products2_hover.png") left center no-repeat;
+    background:  linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../images/products2_hover.png") left center no-repeat;
     background-size: 600px;
   }
   .card1:hover h2 {
@@ -94,7 +95,7 @@
     background-size: 300px;
   }
   .card2:hover {
-    background: url("../images/products3_hover.png") left center no-repeat;
+    background:  linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../images/products3_hover.png") left center no-repeat;
     background-size: 600px;
   }
   .card2:hover h2 {
@@ -104,8 +105,7 @@
     opacity: 1;
   }
   h2 {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    color: black;
+    color: #ffffff;
     margin: 20px;
     opacity: 0;
     transition: opacity 1s;
@@ -131,6 +131,31 @@
 
   .container_card a {
     text-decoration:none;
+  }
+  .container_card p {
+    color:#ffffff;
+opacity:0;
+padding: 10px;
+margin-top:40px;
+  }
+
+  .card0:hover p {
+    opacity: 1;
+    transition: opacity 1s;
+  }
+  
+
+  .card1:hover p {
+    opacity: 1;
+    transition: opacity 1s;
+
+  }
+  
+
+  .card2:hover p {
+    opacity: 1;
+    transition: opacity 1s;
+
   }
   
   
