--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,9 +4,12 @@
 @import 'product';
 @import 'tiers';
 @import 'aboutUs';
-
+@import 'navbar';
+@import 'footer';
+@import 'responsive';
 html{
     height:auto;
+    max-width:100vw;
 }
     
 body {
@@ -14,3 +17,4 @@ body {
     margin: 0;
     font-family: Montserrat, Aleo, Helvetica, Arial, sans-serif !important;
 }
+
