--- a/css/main.css
+++ b/css/main.css
@@ -1576,7 +1576,7 @@ h2 {
             flex-direction: row;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center;
+            align-items: start;
   }
   .footer__col {
     width: 25%;
