--- a/css/main.css
+++ b/css/main.css
@@ -1533,6 +1533,16 @@ h2 {
 }
 
 @media screen and (min-width: 768px) {
+  
+  html{
+    overflow-x: visible !important;
+  }
+  body{
+    overflow-x: visible !important;
+  }
+
+
+  
   .card {
     width: 80vw;
   }
@@ -1544,7 +1554,7 @@ h2 {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    height: 100%;
+    height: 10%;
     position: -webkit-sticky;
     position: sticky;
     visibility: visible;
@@ -1619,7 +1629,7 @@ h2 {
 }
 
 html {
-  height: auto;
+  height: auto;;
   max-width: 100vw ;
   overflow-x: hidden ;
 }
@@ -1630,5 +1640,6 @@ body {
   font-family: Montserrat, Aleo, Helvetica, Arial, sans-serif !important;
   max-width: 100vw ;
   overflow-x: hidden ;
+
 }
 /*# sourceMappingURL=main.css.map */
