remove navbar bullet and edit video z-index

--- a/css/main.css
+++ b/css/main.css
@@ -1131,6 +1131,7 @@ h2 {
   position: fixed;
   bottom: 10px;
   right: 10px;
+  z-index:999;
 }
 
 /*Navigation bar*/
@@ -1194,6 +1195,11 @@ h2 {
  0 0 92px #0fa,
  0 0 102px #0fa,
  0 0 151px #0fa;
+}
+
+.navbar__container li{
+  list-style-type:none;
+
 }
 
 .navbar__logoContainer {
