--- a/css/main.css
+++ b/css/main.css
@@ -395,7 +395,7 @@
   padding: 0px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: 'Poppins';
+  /* font-family: 'Poppins'; */
   width: 100%;
   min-height: 120vh;
   background-image: url("../images/tierBackground.jpg");
@@ -935,7 +935,7 @@ h2 {
   padding: 0px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: 'Poppins';
+  /* font-family: 'Poppins'; */
   width: 100%;
   min-height: 120vh;
   background-image: url("../images/sneakerbackground.jpg");
@@ -983,7 +983,7 @@ h2 {
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
   color: white;
-  font-family: 'Quicksand', sans-serif;
+  /* font-family: 'Quicksand', sans-serif; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1389,7 +1389,7 @@ h2 {
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   line-height: 1.5;
-  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Poppins',   sans-serif; */
 }
 
 .footer__container {
@@ -1643,9 +1643,10 @@ html {
 body {
   height: 100%;
   margin: 0;
-  font-family: Montserrat, Aleo, Helvetica, Arial, sans-serif !important;
   max-width: 100vw ;
   overflow-x: hidden ;
-
 }
-/*# sourceMappingURL=main.css.map */
+
+*{
+  font-family: Montserrat, Aleo, Helvetica, Arial, sans-serif; ;
+}
