--- a/css/main.css
+++ b/css/main.css
@@ -779,13 +779,27 @@ h2 {
   font-style: normal;
   font-weight: bold;
   font-size: 45px;
+  border: dashed #32a1ce;
+  padding: 10px;
+  width: 350px;
 }
 
 .titleofproduct1_text {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
+  font-family: serif;
+  font-weight: bold;
+  font-size: 50px;
+  color: red;
 }
+
+.productsize{
+  font-size: normal;
+  font-family: cursive;
+  font-size: 20px;
+  padding: 20px;
+  border: thick double #32a1ce;
+  width: 500px;
+}
+  
 
 .specification {
   font-style: normal;
@@ -797,6 +811,8 @@ h2 {
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
+  font-family: Georgia, serif;
+  line-height: 1.2;
 }
 
 .product__container {
@@ -828,6 +844,7 @@ h2 {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 75px;
+  padding-top: 45px;
 }
 
 .product__image__container {
@@ -859,6 +876,7 @@ h2 {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 30px;
+
 }
 
 .productSpec__container {
@@ -870,6 +888,7 @@ h2 {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 30px;
+
 }
 
 .product__image__container iframe {
