--- a/scss/_tiers.scss
+++ b/scss/_tiers.scss
@@ -54,6 +54,7 @@
     text-align: center;
     transition: 0.9s;
     opacity: 90%;  
+    border-radius: 25px;
    
   }
   
@@ -100,6 +101,7 @@
     margin: 10% auto;
     text-transform: uppercase;
     font-weight: bold;
+    border-radius: 25px;
 
    }
 
