--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,7 @@
           box-sizing: border-box;
   scrollbar-color: transparent transparent;
   /* thumb and track color */
-  scrollbar-width: 0px;
+  /* scrollbar-width: 0px; */
 }
 
 *::-webkit-scrollbar {
@@ -455,7 +455,7 @@
 
 .rewards h4 {
   left: 50px;
-  font-style: 14px;
+  font-size: 14px;
   font-weight: normal;
   text-align: left;
   color: white;
@@ -496,7 +496,6 @@
 .single-price:hover {
   background: #070707;
   color: white;
-  border-style: 0 0 15px #080808;
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
   z-index: 1;
@@ -580,7 +579,6 @@
 .hero2-image {
   height: 100%;
   min-height: 512px;
-  padding: auto;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../images/cbsproductheroimage.png");
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/cbsproductheroimage.png");
   background-size: auto;
@@ -792,7 +790,6 @@ h2 {
 }
 
 .productsize{
-  font-size: normal;
   font-family: cursive;
   font-size: 20px;
   padding: 20px;
@@ -1039,7 +1036,6 @@ h2 {
   opacity: 1;
   color: white;
   width: 100%;
-  border-style: 0 0 15px #080808;
   z-index: 1;
   border: 3px solid #08f9f1;
   -webkit-box-shadow: 0 0 7px #fff,
@@ -1067,7 +1063,7 @@ h2 {
 }
 
 .timage__rewards {
-  font-size: 1.25;
+  font-size: 1.25em;
   margin-top: 0.25em;
 }
 
@@ -1617,6 +1613,10 @@ h2 {
     width: 25%;
     text-align: start;
   }
+}
+
+iframe{
+  overflow: hidden;
 }
 
 @media screen and (min-width: 1024px) {
