--- a/css/main.css
+++ b/css/main.css
@@ -828,48 +828,14 @@ h2 {
           flex-direction: column;
   position: relative;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   gap: 10px;
 }
 
-.text__container1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 75px;
-  padding-bottom: 250px;
-}
 
-.text__container2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 75px;
-  padding-bottom: 120px;
-}
-
-.text__container3 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 75px;
-  padding-bottom: 100px;
-}
 .product__image__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -886,11 +852,12 @@ h2 {
           align-items: center;
   position: relative;
   min-width: 30%;
-  min-height: 75vh;
+  height: 100%;
   gap: 10px;
 }
 
 .productDesc__container {
+
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -899,7 +866,8 @@ h2 {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 30px;
-
+  justify-content: flex-start;
+  height:100%;  
 }
 
 
@@ -1630,9 +1598,6 @@ h2 {
   }
 }
 
-iframe{
-  overflow: hidden;
-}
 
 @media screen and (min-width: 1024px) {
   .product__container {
