--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/* animation for down arrow */
 @-webkit-keyframes downArrow {
   from {
     bottom: 40px;
@@ -93,6 +94,8 @@
   height: 100%;
 }
 
+/* animation for scrolling carousel */
+
 @-webkit-keyframes tonext {
   75% {
     left: 0;
@@ -152,6 +155,8 @@
     left: 0;
   }
 }
+
+/* animation that specifies where the scroll will go to */
 
 @-webkit-keyframes snap {
   96% {
@@ -1570,6 +1575,9 @@ h2 {
   gap: 15px;
 }
 
+/* MEDIA QUERY STARTS HERE */
+
+/* screen 768px and above */
 @media screen and (min-width: 768px) {
   
   html{
@@ -1634,7 +1642,7 @@ h2 {
   }
 }
 
-
+/* screen 1024px and above */
 @media screen and (min-width: 1024px) {
   .product__container {
     -webkit-box-orient: horizontal;
